<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ViewApplication</string>
    <string name="hello_world">Simple Text View</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Button</string>
    <string name="radio_button_text_1">Radio button 1</string>
    <string name="radio_button_text_2">Radio button 2</string>
    <string name="checkbox_text">Check box</string>
    <string name="toggle_text">Toggle box</string>
    <string name="edit_text_hint">Enter any text</string>
    <string name="any_action_title">Any action</string>
    <string name="group_item1">Menu item 1</string>
    <string name="group_item2">Menu item 2</string>
    <string name="group_item3">Menu item 3</string>
</resources>
